[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.81"
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"] }
wasm-react = "0.3.2"
js-sys = "0.3.58"
web-sys = { version = "0.3.59", features = ["Window", "HtmlElement"] }
